# Graphing_Calculator

./: .gitignore  CMakeLists.txt  README.md
backups/: calc_c.txt  calc_cpp.txt
forms/: calculator_form.ui
include/: Axis_Toggle_Status.hpp  Calculator.hpp  Function.hpp  Input_Manager.hpp  Parse_Error.hpp  UserFunction.hpp  User_Function.hpp  User_Function_Map_Error.hpp  axis_marker_data.hpp  calculator_form.hpp  color_picker_widget.hpp  coordinate_transformation_data.hpp  fmtlex.hpp  formatter.tab.hpp  formatter_lexer.hpp  graph_widget.hpp  graph_window_data.hpp  line_rendering_data.hpp  string_manipulation.hpp  ufdllex.hpp  ui_calculator_form.hpp  yylex.hpp
res/shaders/: axis_shader.vs  curve_shader.fs  curve_shader.vs
src/: axis_marker_data.cpp  calc.cpp  calc.ll  calculator.cpp  calculator_form.cpp  calculator_test.cc  color_picker_widget.cpp  coordinate_transformation_data.cpp  formatter.tab.cpp  formatter.yy  formatter_lexer.l  formatter_lexer.yy.cpp  graph_widget.cpp  graph_window_data.cpp  input_manager.cpp  lexer.l  main.cpp  parse_error.cpp  parser.yy  string_manipulation.cpp  user_function_dependency_locator.yy  user_function_dependency_locator_lexer.l  userfunction.cpp  yyerror.cpp
